# Layout-Data-Engine-New

./: .gitignore  pyproject.toml
bash_scripts/: Dockerfile  docker_env_setup.sh  init_docker.sh  init_env.sh
src/config/: model_config.yaml
src/detectors/: surya_layout.py  surya_model.py
src/driver/: layout_main.py
src/layout_detection_new/config/: label_config.yaml
src/layout_detection_new/detectors/: __init__.py  surya_model.py
src/layout_detection_new/driver/: layout_main.py
src/layout_detection_new/utils/: __init__.py  util.py  visualize.py
src/utils/: util.py
