[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "layout-detection-new-1"
version = "0.1.1"
description = "Layout detection pipeline"
authors = [{name="lavanya.venna"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]